--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   	</section>
   	<section>
   		<div class="back  ">
-			<div class="countdown countdown-container container hidden-small" data-end="1525122000000">
+			<div class="countdown countdown-container container hidden-small" data-end="1525122000000" data-start="1517432400000
+">
 				<div class="clock row">
 					<div class="round clock-item clock-days countdown-time-value col-sm-6 col-md-3">
 						<div class="wrap">
